--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./src/app.js",
-    "dev":"nodemon ./src/app.js"
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "url-metadata": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
