--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "metascraper": "^5.34.7",
     "pg": "^8.11.0",
     "url-metadata": "^2.5.0"
   },
